[package]
edition = "2021"
name = "dioxuscase"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"
dioxus = { version = "0.1", features = ["web"] }
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"

[workspace]
